--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "multi_app",
 	"private": true,
+	"main": "main.js",
 	"dependencies": {
 		"socket.io": "latest",
 		"express": "latest"
